Amélioration de la documentation de l'api
