# app/Http/Controllers/Annotations/EtapeAnnotationController.php
@@ -73,6 +73,70 @@ namespace App\Http\Controllers\Annotations ;
 *),
 
 
+ * @OA\POST(
+ *     path="/api/etapes/{id}",
+ *     summary="Modifier une étape",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="201", description="Created successfully"),
+ * @OA\Response(response="400", description="Bad Request"),
+ * @OA\Response(response="401", description="Unauthorized"),
+ * @OA\Response(response="403", description="Forbidden"),
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 properties={
+ *                     @OA\Property(property="libelle", type="string"),
+ *                     @OA\Property(property="pieces_jointes", type="string", format="binary"),
+ *                     @OA\Property(property="guide_id", type="string"),
+ *                     @OA\Property(property="description", type="string"),
+ *                 },
+ *             ),
+ *         ),
+ *     ),
+ *     tags={"Etape"},
+*),
+
+
+ * @OA\DELETE(
+ *     path="/api/etapes/{id}",
+ *     summary="Supprimer une étape",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="204", description="Deleted successfully"),
+ * @OA\Response(response="401", description="Unauthorized"),
+ * @OA\Response(response="403", description="Forbidden"),
+ * @OA\Response(response="404", description="Not Found"),
+ *     @OA\Parameter(in="path", name="id", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 properties={
+ *                 },
+ *             ),
+ *         ),
+ *     ),
+ *     tags={"Etape"},
+*),
+
+
 */
 
  class EtapeAnnotationController {}
